---
source: crates/cli/tests/project_graph_test.rs
expression: assert.output()
---
digraph {
    0 [ label="explicitAndImplicit" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="node" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="nodeNameOnly" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="nodeNameScope" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="implicit" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="noLang" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="explicit" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 2 [ label="production" arrowhead=box, arrowtail=box]
    1 -> 3 [ label="production" arrowhead=box, arrowtail=box]
    0 -> 1 [ label="development" arrowhead=none]
    0 -> 3 [ label="production" arrowhead=none]
    6 -> 1 [ label="development" arrowhead=box, arrowtail=box]
    6 -> 3 [ label="production" arrowhead=box, arrowtail=box]
}
